--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#rrethnesh">About</a></li>
-          <li><a href="#kontakti">Contact</a></li>
+          <!-- <li><a href="#rrethnesh">About</a></li>
+          <li><a href="#kontakti">Contact</a></li> -->
         </ul>
       </div>
     </nav>
