--- a/index.html
+++ b/index.html
@@ -66,7 +66,24 @@
         <div class="reveal project1-photo"></div>
 
         <div class="project1-text reveal">
-          <h1>Travel Website</h1>
+          <h1>E-commerce website</h1>
+          <p>
+            This project was created using API. In this website users can serach
+            different products, add them to their cart and much more.
+          </p>
+          <a href="https://blend-hasani.github.io/e-commerce/" target="_blank"
+            ><button>Live demo</button>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <div class="reveal project">
+        <div id="project5photo" class="project1-photo"></div>
+
+        <div class="project1-text">
+          <h1>Travel website</h1>
           <p>
             In this website users can research and plan their trips and learn
             about different travel destinations
@@ -74,8 +91,8 @@
           <a
             href="https://blend-hasani.github.io/travel-website/"
             target="_blank"
-            ><button>Live demo</button>
-          </a>
+            ><button>Live demo</button></a
+          >
         </div>
       </div>
     </div>
@@ -140,8 +157,7 @@
         </div>
       </div>
     </div>
-    <div class="projects">
-      <!-- 5 -->
+    <!-- <div class="projects">
       <div class="reveal project">
         <div id="project5photo" class="project1-photo"></div>
 
@@ -158,7 +174,7 @@
           >
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- ---------------- -->
 
