--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="reveal project">
         <div class="reveal project1-photo"></div>
 
-        <div class="project1-text reveal">
+        <div class="project1-text">
           <h1>E-commerce website</h1>
           <p>
             This project was created using API. In this website users can serach
