--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
     <link rel="stylesheet" href="style.css" />
+
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.png" />
 
     <title>Blend Hasani - Personal Portfolio</title>
@@ -24,8 +30,6 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#projects">Projects</a></li>
-          <!-- <li><a href="#rrethnesh">About</a></li>
-          <li><a href="#kontakti">Contact</a></li> -->
         </ul>
       </div>
     </nav>
@@ -54,6 +58,14 @@
             <a href="https://github.com/blend-hasani" target="_blank"
               ><i style="font-size: 60px" class="fa fa-github"></i
             ></a>
+          </div>
+          <div style="margin-top: 30px" class="techstack">
+            <h1 style="font-size: 20px">Tech Stack:</h1>
+            <i style="font-size: 50px" class="fab fa-git"></i>
+            <i style="font-size: 50px" class="fab fa-html5"></i>
+            <i style="font-size: 50px" class="fab fa-css3"></i>
+            <i style="font-size: 50px" class="fab fa-js"></i>
+            <i style="font-size: 50px" class="fab fa-react"></i>
           </div>
         </div>
       </div>
@@ -178,6 +190,7 @@
 
     <!-- ---------------- -->
 
+    <div class="about-me"></div>
     <footer class="footer-distributed">
       <div class="footer-left">
         <h3 id="kontakti">Blend<span> Hasani</span></h3>
